<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- directory selector -->
    <string name="current_location">Current: </string>
    <string name="select_directory">Select</string>
    <string name="parent_directory">[Parent directory]</string>

    <!-- image cropper -->
    <string name="menu_save">Save</string>

    <!-- lock pattern -->
    <string name="alp_cmd_confirm">Confirm</string>
    <string name="alp_cmd_continue">Continue</string>
    <string name="alp_cmd_retry">Retry</string>
    <string name="alp_lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="alp_lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="alp_lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="alp_lockscreen_access_pattern_start">Pattern started</string>
    <string name="alp_msg_connect_4dots">Connect at least 4 dots – try again…</string>
    <string name="alp_msg_draw_an_unlock_pattern">Draw a pattern:</string>
    <string name="alp_msg_draw_pattern_to_unlock">Draw your pattern:</string>
    <string name="alp_msg_pattern_recorded">Pattern recorded!</string>
    <string name="alp_msg_redraw_pattern_to_confirm">Draw the same pattern:</string>
    <string name="alp_msg_release_finger_when_done">Let go when done</string>
    <string name="alp_msg_try_again">Sorry, try again</string>
    <string name="alp_msg_your_new_unlock_pattern">Your new pattern:</string>

    <!-- media controller -->
    <string name="back_description">Back</string>
    <string name="rew_description">Rewind</string>
    <string name="play_description">Play-pause</string>
    <string name="ffwd_description">Fast-forward</string>
    <string name="export_description">Export this narrative</string> <!-- doesn't matter about narrative/media - only used in MediaPhone -->

</resources>
