<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#CC666666"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:drawable/divider_horizontal_dark"
        android:contentDescription="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="4dp" >

        <ImageButton
            android:id="@+id/prev"
            style="@android:style/MediaButton"
            android:layout_width="wrap_content"
            android:contentDescription="@string/back_description"
            android:src="@android:drawable/ic_menu_revert" /> <!-- style="@android:style/MediaButton.Previous" -->

        <ImageButton
            android:id="@+id/rew"
            style="@android:style/MediaButton.Rew"
            android:contentDescription="@string/rew_description" />

        <ImageButton
            android:id="@+id/pause"
            style="@android:style/MediaButton.Play"
            android:contentDescription="@string/play_description" />

        <ImageButton
            android:id="@+id/ffwd"
            style="@android:style/MediaButton.Ffwd"
            android:contentDescription="@string/ffwd_description" />

        <ImageButton
            android:id="@+id/next"
            style="@android:style/MediaButton"
            android:layout_width="wrap_content"
            android:contentDescription="@string/export_description"
            android:src="@android:drawable/ic_menu_share" /> <!-- style="@android:style/MediaButton.Next" -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/time_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="4dp"
            android:textSize="14sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/mediacontroller_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="4dp"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>